ecmascript/parser/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration6_es6/input.ts.stderr
error: Expected (, got }
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration6_es6/input.ts:4:1
  |
4 | }
  | ^

